<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.humannature.www.gift.DonatingPage">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/gridLayout3">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:id="@+id/HeartIcon"
            android:src="@drawable/heart_coins"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/CoinLeftText"
            android:id="@+id/CoinLeft"
            android:layout_row="0"
            android:layout_column="1"
            android:textSize="35dp"
            android:textColor="#787878" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="#00bff3"
        android:id="@+id/gridLayout4">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/CharityName1"
            android:id="@+id/CharityName1"
            android:layout_row="1"
            android:layout_column="0"
            android:gravity="center_vertical"
            android:background="#898989"
            android:textColor="#ffffff"
            android:layout_marginTop="5dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:id="@+id/FirstAmount"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnSpan="6"
            android:layout_gravity="center_vertical|fill_horizontal"
            android:background="#898989"
            android:layout_marginTop="5dp"
            android:max="1000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/CharityName3"
            android:id="@+id/CharityName3"
            android:layout_row="3"
            android:layout_column="0"
            android:gravity="center_vertical"
            android:background="#898989"
            android:textColor="#ffffff"
            android:layout_marginTop="2dp"
            android:layout_gravity="fill_horizontal" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:id="@+id/SecondAmount"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnSpan="6"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:background="#898989"
            android:layout_marginTop="2dp"
            android:max="1000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/CharityName4"
            android:id="@+id/CharityName4"
            android:layout_row="4"
            android:layout_column="0"
            android:gravity="center_vertical"
            android:background="#898989"
            android:textColor="#ffffff"
            android:layout_marginTop="2dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:id="@+id/ThirdAmount"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:layout_columnSpan="6"
            android:background="#898989"
            android:layout_marginTop="2dp"
            android:max="1000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/CharityName6"
            android:id="@+id/CharityName6"
            android:layout_row="5"
            android:layout_column="0"
            android:gravity="center_vertical"
            android:background="#898989"
            android:textColor="#ffffff"
            android:layout_marginTop="2dp"
            android:layout_gravity="fill_horizontal|center_vertical" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:id="@+id/ForthAmount"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:layout_columnSpan="6"
            android:background="#898989"
            android:layout_marginTop="2dp"
            android:max="1000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/TotalText"
            android:id="@+id/TotalText"
            android:layout_row="6"
            android:layout_column="3"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/HeartIcon2"
            android:src="@drawable/heart_coins"
            android:layout_row="6"
            android:layout_column="4"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/TotalAmount"
            android:id="@+id/TotalAmount"
            android:layout_row="6"
            android:layout_column="5"
            android:textColor="#ffffff"
            android:textSize="20dp" />
    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/AutoButtonText"
            android:id="@+id/button"
            android:layout_row="0"
            android:layout_column="0"
            android:background="#00bff3"
            android:textColor="#ffffff"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/EditButtonText"
            android:id="@+id/EditButton"
            android:layout_row="0"
            android:layout_column="1"
            android:background="#00bff3"
            android:textColor="#ffffff"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="8dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Donate"
            android:id="@+id/DonateButton"
            android:layout_row="1"
            android:layout_column="0"
            android:background="#0072bc"
            android:layout_gravity="fill_horizontal"
            android:textColor="#ffffff" />



        <ImageView
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:id="@+id/myDonation"
            android:src="@drawable/mydonation"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:background="#0072bc" />
    </GridLayout>
</RelativeLayout>
