<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.humannature.www.gift.MyDonation">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/gridLayout">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/HeartIcon"
            android:src="@drawable/heart_coins"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Coins"
            android:id="@+id/CoinButton"
            android:layout_below="@+id/gridLayout"
            android:layout_alignLeft="@+id/gridLayout"
            android:layout_alignStart="@+id/gridLayout"
            android:height="60dp"
            android:width="110dp"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/CoinsAmountText"
            android:id="@+id/CoinsAmount"
            android:layout_row="0"
            android:layout_column="1"
            android:textSize="35dp"
            android:textColor="#787878"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Donate"
            android:id="@+id/DonateButton"
            android:layout_below="@+id/gridLayout"
            android:layout_toRightOf="@+id/CoinButton"
            android:layout_toEndOf="@+id/CoinButton"
            android:onClick="onClickDonate"
            android:width="110dp"
            android:height="60dp"
            android:layout_row="1"
            android:layout_column="1" />
    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout"
        android:layout_centerHorizontal="true"
        android:background="#00bff3"
        android:id="@+id/gridLayout2">

        <Button
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:text="Charity A"
            android:id="@+id/CharityButton1"
            android:layout_row="0"
            android:layout_column="0"
            android:onClick="choiceA"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:text="@string/CharityName2"
            android:id="@+id/CharityButton2"
            android:layout_row="0"
            android:layout_column="1"
            android:onClick="choiceB"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:text="@string/CharityName3"
            android:id="@+id/CharityButton3"
            android:layout_row="0"
            android:layout_column="2"
            android:onClick="choiceC"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:text="@string/CharityName4"
            android:id="@+id/CharityButton4"
            android:layout_row="1"
            android:layout_column="0"
            android:onClick="choiceD"   />

        <Button
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:text="@string/CharityName5"
            android:id="@+id/CharityButton5"
            android:layout_row="1"
            android:layout_column="1"
            android:onClick="choiceE"   />

        <Button
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:text="@string/CharityName6"
            android:id="@+id/CharityButton6"
            android:layout_row="1"
            android:layout_column="2"
            android:onClick="choiceF"   />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Selected 0"
            android:id="@+id/SelectedText"
            android:layout_row="2"
            android:layout_column="0"
            android:textColor="#ffffff" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/searchButton"
            android:src="@drawable/search_button"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="right" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/filterButton"
            android:src="@drawable/filter_button"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="right"
            android:background="#00bff3" />

    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/gridLayout2"
        android:layout_alignStart="@+id/gridLayout2"
        android:layout_marginBottom="30dp">

       <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/notification"
            android:src="@drawable/notification_icon"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/AccountNameText"
            android:id="@+id/AccountName"
            android:layout_row="0"
            android:layout_column="1"
            android:textSize="25dp"
            android:layout_gravity="center_vertical"
            android:textColor="#787878" />
    </GridLayout>

</RelativeLayout>
